RESOLVED FIXED208622
Handle an out of memory error while constructing the BytecodeGenerator.
https://bugs.webkit.org/show_bug.cgi?id=208622
Summary Handle an out of memory error while constructing the BytecodeGenerator.
Mark Lam
Reported 2020-03-04 18:37:26 PST
Attachments
proposed patch. (10.22 KB, patch)
2020-03-04 18:44 PST, Mark Lam
saam: review+
patch for landing. (10.25 KB, patch)
2020-03-04 22:29 PST, Mark Lam
no flags
Mark Lam
Comment 1 2020-03-04 18:44:50 PST
Created attachment 392527 [details] proposed patch.
Mark Lam
Comment 2 2020-03-04 22:29:12 PST
Created attachment 392537 [details] patch for landing. Thanks for the review. Fixed the test to only run the default configuration: it relies on GC not running often, and hence, will not work with GC continuous configurations. Re-testing on the EWS now.
Mark Lam
Comment 3 2020-03-04 23:58:18 PST
I skipped the test for memory limited devices. Landed in r257907: <http://trac.webkit.org/r257907>.
Note You need to log in before you can comment on or make changes to this bug.