Handle an out of memory error while constructing the BytecodeGenerator. https://bugs.webkit.org/show_bug.cgi?id=208622 <rdar://problem/59341136>

Reviewed by Saam Barati.

JSTests:

* stress/out-of-memory-while-constructing-BytecodeGenerator.js: Added.

Source/JavaScriptCore:

Added the ability to handle out of memory errors encountered during the
construction of the BytecodeGenerator.  Currently, we only use this for the
case where we fail to instantiate a ScopedArgumentsTable.

* bytecompiler/BytecodeGenerator.cpp:
(JSC::BytecodeGenerator::generate):
(JSC::BytecodeGenerator::BytecodeGenerator):
* bytecompiler/BytecodeGeneratorBase.h:
* runtime/ScopedArgumentsTable.cpp:
(JSC::ScopedArgumentsTable::tryCreate):
* runtime/ScopedArgumentsTable.h:
* runtime/SymbolTable.h:

Source/WTF:

* wtf/CagedUniquePtr.h:
(WTF::CagedUniquePtr::tryCreate):



Canonical link: https://commits.webkit.org/221539@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@257907 268f45cc-cd09-0410-ab3c-d52691b4dbfc